--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,9 @@
 /ggp-base-sancho/logs
 /ggp-base-sancho/junit
 /Report/_minted-project
+/Report/project.bbl
+/Report/project.blg
+/Report/project.aux
+/Report/project.dvi
+/Report/project.log
+/Report/project.synctex.gz
